set up health check framework
