# admin/app/media_types.go
@@ -9,3 +9,47 @@
 // --version=v1.3.0
 
 package app
+
+import (
+	"github.com/goadesign/goa"
+)
+
+// Health result for service (default view)
+//
+// Identifier: application/x.admin.health+json; view=default
+type XAdminHealth struct {
+	// Details about the service health
+	Details *string `form:"details,omitempty" json:"details,omitempty" xml:"details,omitempty"`
+	// Health check name
+	Name string `form:"name" json:"name" xml:"name"`
+	// Health check status
+	Status string `form:"status" json:"status" xml:"status"`
+}
+
+// Validate validates the XAdminHealth media type instance.
+func (mt *XAdminHealth) Validate() (err error) {
+	if mt.Name == "" {
+		err = goa.MergeErrors(err, goa.MissingAttributeError(`response`, "name"))
+	}
+	if mt.Status == "" {
+		err = goa.MergeErrors(err, goa.MissingAttributeError(`response`, "status"))
+	}
+	return
+}
+
+// XAdminHealthCollection is the media type for an array of XAdminHealth (default view)
+//
+// Identifier: application/x.admin.health+json; type=collection; view=default
+type XAdminHealthCollection []*XAdminHealth
+
+// Validate validates the XAdminHealthCollection media type instance.
+func (mt XAdminHealthCollection) Validate() (err error) {
+	for _, e := range mt {
+		if e != nil {
+			if err2 := e.Validate(); err2 != nil {
+				err = goa.MergeErrors(err, err2)
+			}
+		}
+	}
+	return
+}
